# my_project

./: README.md  class_index.html  file2.py  project_2.py  pyproject.toml  test_code.py  transactions_excel.xlsx  widget.py
project_2/: pyproject.toml
project_2/src/: masks.py  processing.py
src/: decorators.py  external_api.py  file_readers.py  filter_transactions.py  generators.py  main.py  masks.py  pandas_&_CSV.py  pandas_and_CSV.py  practice.py  processing.py  utils.py  widget.py
tests/: conftest.py  test_external_api.py  test_filter_transaction.py  test_main.py
